--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -14,9 +14,9 @@ jobs:
       with:
         node-version: '14.x'
     - name: Install dependencies
-      run: npm install
+      run: sudo npm install
     - name: Build
-      run: npm run build
+      run: sudo npm run build
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
