--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "predeploy": "sudo npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "sudo react-scripts build",
+    "build": "sudo npx react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
