--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -15,6 +15,10 @@ jobs:
         node-version: '14.x'
     - name: Install dependencies
       run: npm install
+    - name: Change file permissions
+      run: chmod +x node_modules/.bin/react-scripts
+    - name: Build React app
+      run: node_modules/.bin/react-scripts build
     - name: Build
       run: npm run build
     - name: Deploy to GitHub Pages
