--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "predeploy": "sudo npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "sudo npx react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
